WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
295974
Fix non-unified builds, part 5: more missing includes
https://bugs.webkit.org/show_bug.cgi?id=295974
Summary
Fix non-unified builds, part 5: more missing includes
Claudio Saavedra
Reported
2025-07-15 05:20:33 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Claudio Saavedra
Comment 1
2025-07-15 05:21:45 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/48045
EWS
Comment 2
2025-07-15 05:27:29 PDT
Committed
297391@main
(d0e5e1a4ec1b): <
https://commits.webkit.org/297391@main
> Reviewed commits have been landed. Closing PR #48045 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-07-15 05:28:13 PDT
<
rdar://problem/155869840
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug